[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/duel/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/img/card/card.png" type="Texture" id=2]
[ext_resource path="res://assets/img/card/card-evade.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.7511, 68.3218 )

[sub_resource type="Animation" id=2]
resource_name = "hide_card"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CardBackground:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 120, 5, 103, 144 ), Rect2( 3, 3, 105, 148 ), Rect2( 3, 3, 105, 148 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CardBackground/Type:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CardBackground:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.2931, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CardBackground:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CardBackground:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 3, 3, 105, 148 ), Rect2( 120, 5, 103, 144 ), Rect2( 120, 5, 103, 144 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CardBackground/Type:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CardBackground:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.2931, 10.2931, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CardBackground:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="CardBackground" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 3, 3, 105, 148 )

[node name="Type" type="Sprite" parent="CardBackground"]
visible = false
position = Vector2( -0.513244, -2.52848 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="CardBackground"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardBackground/Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide_card = SubResource( 2 )
anims/show_card = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="CardBackground/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="CardBackground/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="CardBackground/Area2D" to="." method="_on_Area2D_mouse_exited"]
